--- a/ci/backend/Dockerfile
+++ b/ci/backend/Dockerfile
@@ -2,14 +2,14 @@ FROM openjdk:17
 
 WORKDIR /app
 
-COPY src/ .
+COPY src/ src/
 COPY pom.xml .
 COPY mvnw .
 COPY mvnw.cmd .
 COPY .mvn/ .mvn/
 
-RUN ./mvnw package
+RUN chmod +x ./mvnw && ./mvnw package
 
 EXPOSE 8080
 
-CMD ["java", "-jar", "target/bookingshow-0.0.1-SNAPSHOT.jar"]
+CMD ["./mvnw", "spring-boot:run"]
