--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
 			<version>2.2.224</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.5.0</version>
+		</dependency>
 
 	</dependencies>
 
@@ -90,6 +95,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>com/fmi/bookingshow/BookingshowApplication</mainClass>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
