--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,11 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.5.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-hateoas</artifactId>
+			<version>2.6.4</version>
+		</dependency>
 
 	</dependencies>
 	<dependencyManagement>
