integrating original app with docker

--- a/microservices/eurekaserver/src/main/resources/application.properties
+++ b/microservices/eurekaserver/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.application.name=eurekaserver
-spring.config.import=optional:configserver:http://localhost:8070
+spring.config.import=optional:configserver:http://configserver:8070
