--- a/microservices/gatewayserver/src/main/resources/application.properties
+++ b/microservices/gatewayserver/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=gatewayserver
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://eurekaserver:8761/eureka
 server.port=8080
-spring.config.import=optional:configserver:http://localhost:8070/
+spring.config.import=optional:configserver:http://configserver:8070
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lowerCaseServiceId=true
 spring.cloud.gateway.default-filters[0]=DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials, RETAIN_UNIQUE
@@ -11,4 +11,4 @@ spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedHeaders="*"
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowCredentials=true
 logging.level.fmi.gatewayserver=DEBUG
 management.tracing.sampling.probability=1.0
-management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
