--- a/microservices/user-service/src/main/resources/application.properties
+++ b/microservices/user-service/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.application.name=user-service
-spring.config.import=optional:configserver:http://localhost:8070/
+spring.config.import=optional:configserver:http://configserver:8070
